fix(project): fix detail project and storage
